--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 	font-family: "Verdana", sans-serif;
 	margin: 100px;
 	background-color: #990033;
+	opacity: none;
 }
 
 .container {
@@ -11,12 +12,43 @@ body {
 	grid-template-columns: 1fr;
 }
 
+h1 {
+	color : white;
+}
+
+p {
+	color : white;
+
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+	opacity: 0.25;
+	border-radius: 50%
+}
+
+img:hover {
+	opacity: 1.0;
+}
+
+article {
+	color: #EDEACD;
+}
+
+title {
+	color : white;
+}
+
+a {
+	color : white;
+}
 
 /* NavBar Styles */
 
 .nav-wrapper {
 	display:  flex;
-	justify-content: 
+	justify-content;
 	padding: 38px;
 
 }
@@ -25,20 +57,19 @@ body {
 	display: flex;
 }
 
+.right-side {
+	display: flex;
+}
+
 .nav-wrapper> .left-side > div {
-	margin-right: 30px;
+	margin-right: 25px;
 	text-transform: uppercase;
 	font-size: 1rem;
 	
 }
-.nav-links-wrapper-Experience {
-	margin-left: 30px;
-	text-transform: uppercase;
-	font-size: 1rem;
-}
 
 .nav-links-wrapper {
-	height: 20px;
+	height: 25px;
 	border-bottom: 1px solid transparent;
 	transition: border-bottom 0.5s; 
 }
@@ -84,10 +115,11 @@ body {
 
 
 .Background-img.Responsive {
-	vertical-align: left;
+	
 	width: 450px;
-	height: auto;
+	height: 450px;
 	border-radius: 450px;
+	opacity: 1.0;
 }
 
 .ProfilePic-Avatar-responsive {
@@ -151,6 +183,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	width: 50%;
+
 }
 
 .FCC-Certificate-Responsive {
@@ -170,55 +203,6 @@ body {
 
 
 
-div {
-
-}
-
-
-
-h1 {
-	color : white;
-}
-
-p {
-	color : white;
-
-}
-
-img {
-	max-width: 100%;
-	height: auto;
-}
-
-
-article {
-	color: #EDEACD;
-}
-
-
-
-title {
-	color : white;
-}
-
-
-
-
-p {
-	color: white;
-}
-
-a {
-	color : white;
-}
-
-
-
-
-
-img {
-	border-radius: 50%
-}
 
 
 
@@ -234,39 +218,4 @@ img {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Certificates*/
-
-
-
-
-
-
-.UdemyPythonCertifcate-Responsive {
-	vertical-align: left;
-	width: 100%
-	height: auto;
-}
-
-
-.CFI-Certificate-Responsive {
-	vertical-align: right;
-	width: 100%
-	height: auto;
-	
-}
 
