--- a/styles.css
+++ b/styles.css
@@ -7,144 +7,55 @@ body {
 	font-family: 'Work Sans', sans-serif;
 
 }
-
-.background-options {
-	background: #607d8b;
-	width: 50%;
-	height: 200px;
-	font-family: 'Work Sans', sans-serif;
-}
-
-
-.flipping-box {
-	position: relative;
-	top: calc(50% - 150px);
-	left: calc(50% - 100px);
-	transform: perspective(800px) rotateY(-35deg) ;
-	width: 350px;
-	height: 400px;
-	transform-style: preserve-3d;
-
-}
-
-.flipping-box:before {
-	content: '';
-	position: absolute;
-	bottom: -100px;
-	left: 0;
-	width: 100%;
-	height: 50px;
-	background: #000;
-	filter: blur(40px);
-	opacity: 0.5;
-	transform: rotateX(90deg);
-}
-
-.flipping-box div {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	transform-style: preserve-3d;
-	animation: animate 3s linear infinite;
-}
-
-.flipping-box div span {
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: block;
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(0deg, #f1f1f1, #bbb, #f1f1f1);
-	border-radius: 20px;
-}
-
-
-.flipping-box div span:nth-child(1) 
+h1, h2, h3, h4, h5, h6 
 {
-	transform: rotateX(0deg);
+ 	font-family: 'Abril Fatface', serif;
 }
 
-.flipping-box div span:nth-child(2) 
+p
+ {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 900;
+ 	color: #ffffff;
+
+}
+
+title 
 {
-	transform: rotateX(45deg);
+	font-family: 'Abril Fatface', serif;
+	color: #ffffff;
 }
-.flipping-box div span:nth-child(3) 
+
+a 
 {
-	transform: rotateX(-45deg);
+	color : #ffffff;
 }
-.flipping-box div span:nth-child(4) 
+
+.Entry-Text-About
 {
-	transform: rotateX(90deg);
-}
-
-.certificates-flipping-box {
-	position: absolute;
-	top: calc(70% - 150px);
-	left: calc(70% - 100px);
-	transform: perspective(800px) rotateY(-35deg) ;
-	width: 150px;
-	height: 350px;
-	transform-style: preserve-3d;
-
-}
-
-.certificates-flipping-box:before {
-	content: '';
-	position: absolute;
-	bottom: -100px;
-	left: 0;
-	width: 100%;
-	height: 50px;
-	background: #000;
-	filter: blur(40px);
-	opacity: 0.5;
-	transform: rotateX(90deg);
-}
-
-.certificates-flipping-box div {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	transform-style: preserve-3d;
-	animation: animate 3s linear infinite;
-}
-
-.certificates-flipping-box div span {
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: block;
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(0deg, #f1f1f1, #bbb, #f1f1f1);
-	border-radius: 20px;
+	color: #ffffff;
+	font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
 }
 
 
-.certificates-flipping-box div span:nth-child(1) 
+img 
 {
-	transform: rotateX(0deg);
+	max-width: 100%;
+	height: auto;
+	opacity: 0.25;
+	border-radius: 50%
 }
 
-.certificates-flipping-box div span:nth-child(2) 
+img:hover 
 {
-	transform: rotateX(45deg);
-}
-.certificates-flipping-box div span:nth-child(3) 
-{
-	transform: rotateX(-45deg);
-}
-.certificates-flipping-box div span:nth-child(4) 
-{
-	transform: rotateX(90deg);
+	opacity: 1.00;
 }
 
-.about-flipping-box {
+/* About-Flipping-Box */
+
+
+.about-flipping-box 
+{
 	position: relative;
 	top: calc(50% - 150px);
 	left: calc(50% - 100px);
@@ -175,7 +86,7 @@ body {
 	width: 100%;
 	height: 100%;
 	transform-style: preserve-3d;
-	animation: animate 3s linear infinite;
+	animation: animate 7s linear infinite;
 }
 
 .about-flipping-box div span {
@@ -208,41 +119,7 @@ body {
 	transform: rotateX(90deg);
 }
 
-h1, h2, h3, h4, h5, h6 
-{
- 	font-family: 'Abril Fatface', serif;
-}
 
-p
- {
-	font-family: 'Crimson Text', serif;
- 	color: #ffffff;
-
-}
-
-title 
-{
-	font-family: 'Abril Fatface', serif;
-	color: #ffffff;
-}
-
-a 
-{
-	color : #ffffff;
-}
-
-img 
-{
-	max-width: 100%;
-	height: auto;
-	opacity: 0.25;
-	border-radius: 50%
-}
-
-img:hover 
-{
-	opacity: 1.00;
-}
 
 /* NavBar Styles */
 
@@ -311,11 +188,137 @@ img:hover
 	text-decoration: none;
 }
 
+/* Transitions */
 
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --secondary-color: #151226;
+  --contrast-color: #BF307F;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  z-index: -10;
+  background-color: var(--contrast-color);
+}
+
+.container {
+  display: flex;
+  height: vh;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  animation: expand .8s ease forwards;
+  background-color: var(--secondary-color);
+  position: relative;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: all .8s ease;
+}
+
+.container_content {
+ width: 50%;
+}
+
+.container_content_inner {
+  width: 80%;
+  margin-left: 80px;
+}
+
+.container_outer_img {
+  margin: 50px;
+  width: 50%;
+  overflow: hidden;
+}   
+    
+.container_img {
+  width: 100%;
+  animation: slideIn 1.5s ease-in-out forwards;
+}
+
+.par {
+  height: auto;
+  overflow: hidden;
+}
+
+p{
+  line-height: 28px;
+  transform: translateY(300px);
+  animation: slideUp .8s ease-in-out forwards .8s;
+}
+
+.btns {
+  height: 100%;
+  position: relative;
+  width: 150px;
+  overflow: hidden;
+}
+
+.btns_more {
+  background: transparent;
+  border: 1px solid var(--contrast-color);
+  border-radius: 50px;
+  padding: 8px 12px;
+  color: #BF307F;
+  font-size: 16px;
+  text-transform: uppercase;
+  position: relative;
+  margin-top: 15px;
+  outline: none;
+  transform: translateY(50px);
+  animation: slideUp .8s ease-in-out  forwards 1s;
+}
+
+.title {
+  overflow: hidden;
+  height: auto;
+}
+
+h1 {
+    font-size: 40px;
+    color: var(--contrast-color);
+    margin-bottom: 20px;
+    transform: translateY(100px);
+    animation: slideUp .8s ease forwards .5s;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(500px) scale(.2);
+  }
+  100% {
+    transform: translateX(0px) scale(1);
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(300px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes expand {
+  0% {
+    transform: translateX(1400px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
 
 /*Porto-folio Styles*/
-
-
 .portfolio-items-wrappers 
 {
 	display: grid;
@@ -327,9 +330,15 @@ img:hover
 	position: relative;
 }
 
+.ProfilePicAvatar-class {
+	max-width: 100%;
+	height: auto;
+	border-radius: 50%
 
+}
 
-.ProfilePic-Avatar-responsive {
+.ProfilePic-Avatar-responsive 
+{
 	vertical-align: middle;
 	max-width: 170px;
 	height: auto;
@@ -339,7 +348,8 @@ img:hover
 
 /* About */
 
-.About-Body-Class {
+.About-Body-Class 
+{
 	font-family:font-family: "Verdana", sans-serif;
 	margin: 100px;
 	background-color: #990033; 
@@ -349,18 +359,27 @@ img:hover
 
 /* Certificates */
 
-
-
-.Entry-Text-About-Header {
+.Entry-Text-About-Header 
+{
 
 	vertical-align: middle;
 }
-.UdemyPythonCertifcate-Responsive {
+
+.UdemyPythonCertifcate-Responsive 
+{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	width: 50%;
 
+}
+
+.UdemyPythonCertifcate-Responsive:img 
+{
+	max-width: 100%;
+	height: auto;
+	opacity: 0.25;
+	border-radius: 50%
 }
 
 .FCC-Certificate-Responsive {
@@ -370,14 +389,21 @@ img:hover
 	width: 50%;
 }
 
-.CFI-Certificate-Responsive-Certificates {
+.FCC-Certificate-Responsive:img 
+{
+	max-width: 100%;
+	height: auto;
+	opacity: 0.25;
+	border-radius: 50%
+}
+
+.CFI-Certificate-Responsive-Certificates
+{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	width: 50%;
 }
-
-
 
 .CFI-Certificate-Responsive-Certificates:img 
 {
@@ -406,12 +432,7 @@ img:hover
 
 }
 
-.ProfilePicAvatar-class {
-	max-width: 100%;
-	height: auto;
-	border-radius: 50%
 
-}
 
 
 
